# pg_duckdb

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .nvimrc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.global  NOTICE  README.md  date-check.cpp  dev_requirements.txt  docker-bake.hcl  docker-compose.yml  duckdb.control  pg_duckdb.control  pyproject.toml  quack--0.0.1.sql
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build_and_test.yaml  debian-package.yaml  docker.yaml
cmake/: FindPostgreSQL.cmake
debian/: README  changelog  compat  control  copyright  pgversions  postgresql-14-pg-duckdb.install  postgresql-15-pg-duckdb.install  postgresql-16-pg-duckdb.install  postgresql-17-pg-duckdb.install  postgresql-18-pg-duckdb.install  rules
docker/: README.md  postgresql.conf
docker/init.d/: 0002-enable-md-pg_duckdb.sql
docs/: README.md  SYNTAX_GUIDE.md  compilation.md  extensions.md  functions.md  gotchas_and_syntax.md  motherduck-rs.md  motherduck.md  secrets.md  settings.md  transactions.md  types.md
expected/: array_type_support.out  basic.out  create_extension.out  search_path.out  type_support.out
include/pgduckdb/: logger.hpp  pg_declarations.hpp  pgduckdb.h  pgduckdb_background_worker.hpp  pgduckdb_ddl.hpp  pgduckdb_detoast.hpp  pgduckdb_duckdb.hpp  pgduckdb_extensions.hpp  pgduckdb_external_tables.hpp  pgduckdb_fdw.hpp  pgduckdb_filter.hpp  pgduckdb_foreign_tables.hpp  pgduckdb_guc.h  pgduckdb_guc.hpp  pgduckdb_hooks.hpp  pgduckdb_memory_allocator.hpp  pgduckdb_metadata_cache.hpp  pgduckdb_node.hpp  pgduckdb_options.hpp  pgduckdb_pg_list.h  pgduckdb_planner.hpp  pgduckdb_process_latch.hpp  pgduckdb_process_lock.hpp  pgduckdb_ruleutils.h  pgduckdb_secrets_helper.hpp  pgduckdb_table_am.hpp  pgduckdb_types.hpp  pgduckdb_userdata_cache.hpp  pgduckdb_utils.hpp  pgduckdb_xact.hpp
include/pgduckdb/bgw/: client.hpp  main.hpp  messages.hpp  network.hpp  utils.hpp
include/pgduckdb/catalog/: pgduckdb_catalog.hpp  pgduckdb_schema.hpp  pgduckdb_storage.hpp  pgduckdb_table.hpp  pgduckdb_transaction.hpp  pgduckdb_transaction_manager.hpp  pgduckdb_type.hpp
include/pgduckdb/common/: scoped_postgres_resource.hpp
include/pgduckdb/duckdb_vendor/: enum_type_info_templated.hpp
include/pgduckdb/pg/: datum.hpp  declarations.hpp  error_data.hpp  explain.hpp  latch.hpp  numeric.hpp  relations.hpp  string_utils.hpp  transactions.hpp  types.hpp
include/pgduckdb/scan/: heap_reader.hpp  heap_reader_worker.hpp  heap_tuple_visibility.hpp  index_scan_utils.hpp  postgres_index_scan.hpp  postgres_scan.hpp  (+3 more)
include/pgducklake/: pgducklake_catalog.hpp  pgducklake_handler.hpp  pgducklake_metadata_manager.hpp  pgducklake_schema_entry.hpp  pgducklake_storage.hpp  pgducklake_table.hpp  pgducklake_transaction.hpp  pgducklake_transaction_manager.hpp
include/quack/: quack.h  quack.hpp  quack_ddl.hpp  quack_detoast.hpp  quack_duckdb.hpp  quack_duckdb_connection.hpp  quack_error.hpp  quack_filter.hpp  quack_heap_scan.hpp  quack_heap_seq_scan.hpp  quack_memory_allocator.hpp  quack_node.hpp  quack_options.hpp  quack_pg_list.h  quack_planner.hpp  quack_process_lock.hpp  quack_scan.hpp  quack_select.h  quack_types.hpp  quack_utils.hpp  scanner.hpp
regress/: CMakeLists.txt  regress.conf  schedule.conf
regress/expected/: basic.out
regress/sql/: basic.sql
scripts/: generate-pg-include-guard.sh  valgrind_pgduckdb.sh
scripts/tpch/: README.md  load-psql.sql  run.py  tpch_config_template.xml
sql/: CMakeLists.txt  array_type_support.sql  basic.sql  create_extension.sql  duckdb--0.0.1.sql  pg_duckdb--0.0.1.sql  pg_duckdb--0.1.0--0.2.0.sql  pg_duckdb--0.2.0--0.3.0.sql  pg_duckdb--0.3.0--0.4.0.sql  pg_duckdb--0.3.0--1.0.0.sql  pg_duckdb--1.0.0--1.1.0.sql  pg_duckdb--1.0.0.sql  pg_duckdb--1.1.0--1.2.0.sql  quack--0.0.1.sql  quack.control  search_path.sql  type_support.sql
src/: CMakeLists.txt  logger.cpp  pgduckdb.cpp  pgduckdb_background_worker.cpp  pgduckdb_bgw.cpp  pgduckdb_ddl.cpp  pgduckdb_detoast.cpp  pgduckdb_duckdb.cpp  pgduckdb_external_tables.cpp  pgduckdb_fdw.cpp  pgduckdb_filter.cpp  pgduckdb_foreign_tables.cpp  pgduckdb_guc.cpp  pgduckdb_hooks.cpp  pgduckdb_memory_allocator.cpp  pgduckdb_metadata_cache.cpp  pgduckdb_node.cpp  pgduckdb_options.cpp  pgduckdb_planner.cpp  pgduckdb_ruleutils.cpp  pgduckdb_secrets_helper.cpp  pgduckdb_table_am.cpp  pgduckdb_types.cpp  pgduckdb_userdata_cache.cpp  pgduckdb_utils.cpp  pgduckdb_xact.cpp  quack.c  quack.cpp  quack_ddl.cpp  quack_detoast.cpp  quack_duckdb.cpp  quack_duckdb_connection.cpp  quack_filter.cpp  quack_heap_scan.cpp  quack_heap_seq_scan.cpp  quack_hooks.c  quack_hooks.cpp  quack_internal.cpp  quack_memory_allocator.cpp  quack_node.cpp  (+10 more)
src/bgw/: client.cpp  main.cpp  messages.cpp  network.cpp  utils.cpp
src/bgw/tests/: basic.cpp  main.cpp
src/catalog/: pgduckdb_catalog.cpp  pgduckdb_schema.cpp  pgduckdb_storage.cpp  pgduckdb_table.cpp  pgduckdb_transaction.cpp  pgduckdb_transaction_manager.cpp  pgduckdb_type.cpp
src/pg/: datum.cpp  error_data.cpp  explain.cpp  latch.cpp  memory.cpp  numeric.cpp  permissions.cpp  pgduckdb_subscript.cpp  relations.cpp  transactions.cpp  types.cpp
src/pgducklake/: pgducklake_catalog.cpp  pgducklake_handler.cpp  pgducklake_metadata_manager.cpp  pgducklake_schema_entry.cpp  pgducklake_storage.cpp  pgducklake_table.cpp  pgducklake_transaction.cpp  pgducklake_transaction_manager.cpp
src/scan/: heap_reader.cpp  heap_reader_worker.cpp  heap_tuple_visibility.cpp  index_scan_utils.cpp  postgres_index_scan.cpp  postgres_scan.cpp  postgres_seq_scan.cpp  postgres_table_reader.cpp  postgres_view.cpp
src/scanner/: heap.cpp
src/types/: pgduckdb_enum.cpp
src/utility/: copy.cpp
test/pycheck/: conftest.py  copy_test.py  encoding_test.py  explain_test.py  extension_test.py  motherduck_test.py  motherduck_token_helper.py  multi_duckdb_helper.py  non_superuser_test.py  prepared_test.py  sqlsmith_fuzzy_test.py  temporary_table_test.py  utils.py
test/regression/: .gitignore  Makefile  regression.conf  schedule
(+175 files in other folders)
